--- a/frontend/src/Components/CardProduct/CardProduct.css
+++ b/frontend/src/Components/CardProduct/CardProduct.css
@@ -1,8 +1,12 @@
 
-
+.card--container
+{
+  display: flex;
+ 
+}
 .card {
     max-width: 300px;
-  
+    margin:10px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    
@@ -50,4 +54,7 @@
   .swiper--container
   {
     padding:30px 0px;
+    display: flex;
+   
+   
   }
