--- a/frontend/src/Global/Navbar/Navbar.css
+++ b/frontend/src/Global/Navbar/Navbar.css
@@ -28,11 +28,11 @@
 }
 .searchbar--wrapper
 {
-    display: flex;
-    justify-content: space-between;
+   
+    
     border: 1px solid black;
     padding:0px 30px;
-    margin-top:10px;
+    margin-top:20px;
     border-radius:30px;
 }
 .search--here
@@ -44,6 +44,8 @@
     padding:5px 7px;
     border:none;
     background-color: transparent;
+    outline:none;
+    width: 100%;
 }
 .searchcategory p
 {
